# SpeedInform

./: .gitignore  PLANTILLA INFORME PARA PROGRAM.docx  README.md  pyproject.toml  requirements.txt
src/speedinform/: __init__.py  __main__.py  case.py  exporter.py  extractor.py  generator.py  parser.py  pyproject.toml
src/speedinform/ui/: __init__.py  main_window.py  wizard.py
tests/: test_parser.py
