[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "speedinform"
version = "0.1.0"
description = "Aplicación de escritorio para generar informe/avocamiento/elevacion en Word/PDF desde denuncias (OCR)."
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
